--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -2,3 +2,4 @@ bitbag_sylius_user_com_plugin:
     ui:
         user_com_api_key: 'User.com API Key'
         user_com_url: 'User.com Instance URL'
+        user_com_gtm: 'Google Tag Manager ID'
