--- a/translations/messages.pl.yaml
+++ b/translations/messages.pl.yaml
@@ -2,3 +2,4 @@ bitbag_sylius_user_com_plugin:
     ui:
         user_com_api_key: 'Klucz API User.com'
         user_com_url: 'Adres URL instancji User.com'
+        user_com_gtm: 'Google Tag Manager ID'
